--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 dependencies = [
     "kafka-python>=2.0.2",
     "keyboard>=0.13.5",
+    "pynput>=1.7.7",
 ]
 requires-python = ">=3.8"
 readme = "README.md"
